still trying to fix css issues - removed #canvas in favor of background-image - still not showing

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,22 +1,10 @@
 *
 {
-    text-align: left;
+    background-image: url("../../background.jpg");
+    text-align: center;
     text-decoration: none;
     margin: auto;
 }
-
-body {
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
-  }
-  
-#canvas {
-    position: absolute;
-    margin: 0px;
-    padding: 0px;
-    background-color: #D5D18A;
-  }
 
 ol li a
 {
